@@ -4,7 +4,6 @@ import ch.njol.skript.config.Config;
 import ch.njol.skript.config.Node;
 import ch.njol.skript.config.SectionNode;
 import ch.njol.skript.config.SimpleNode;
-import ch.njol.skript.events.bukkit.PreScriptLoadEvent;
 import ch.njol.skript.lang.*;
 import ch.njol.skript.lang.parser.ParserInstance;
 import ch.njol.skript.log.CountingLogHandler;
@@ -21,6 +20,7 @@ import ch.njol.util.OpenCloseable;
 import ch.njol.util.StringUtils;
 import org.bukkit.Bukkit;
 import org.jetbrains.annotations.ApiStatus;
+import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.jetbrains.annotations.UnknownNullability;
 import org.skriptlang.skript.bukkit.text.TextComponentParser;
@@ -111,7 +111,7 @@ public class ScriptLoader {
 	 * All loaded scripts.
 	 */
 	@SuppressWarnings("null")
-	private static final Set<Script> loadedScripts = Collections.synchronizedSortedSet(new TreeSet<>(new Comparator<Script>() {
+	private static final Set<Script> loadedScripts = Collections.synchronizedSortedSet(new TreeSet<>(new Comparator<>() {
 		@Override
 		public int compare(Script s1, Script s2) {
 			File f1 = s1.getConfig().getFile();
@@ -157,6 +157,13 @@ public class ScriptLoader {
 	public static Script getScript(File file) {
 		if (!file.isFile())
 			throw new IllegalArgumentException("Something other than a file was provided.");
+		try {
+			file = file.getCanonicalFile();
+		} catch (IOException e) {
+			//noinspection ThrowableNotThrown
+			Skript.exception(e, "An exception occurred while trying to get the canonical file of: " + file);
+			return null;
+		}
 		for (Script script : loadedScripts) {
 			if (file.equals(script.getConfig().getFile()))
 				return script;
@@ -284,7 +291,6 @@ public class ScriptLoader {
 
 	/**
 	 * Returns the executor used for submitting tasks based on the user config.sk settings.
-	 *
 	 * The thread count will be based on the value of {@link #asyncLoaderSize}.
 	 * <p>
 	 * You may also use class {@link ch.njol.skript.util.Task} and the appropriate constructor
@@ -319,7 +325,7 @@ public class ScriptLoader {
 
 		// Remove threads
 		while (loaderThreads.size() > size) {
-			AsyncLoaderThread thread = loaderThreads.remove(loaderThreads.size() - 1);
+			AsyncLoaderThread thread = loaderThreads.removeLast();
 			thread.cancelExecution();
 		}
 		// Add threads
@@ -334,7 +340,7 @@ public class ScriptLoader {
 			private final AtomicInteger threadId = new AtomicInteger(0);
 
 			@Override
-			public Thread newThread(Runnable runnable) {
+			public Thread newThread(@NotNull Runnable runnable) {
 				Thread thread = new Thread(asyncLoaderThreadGroup, runnable, "Skript async loaders thread " + threadId.incrementAndGet());
 				thread.setDaemon(true);
 				return thread;
@@ -447,6 +453,26 @@ public class ScriptLoader {
 	 * Script Loading Methods
 	 */
 
+	private static final Set<File> trackedFiles = new HashSet<>();
+
+	/**
+	 * Tracks that a file should be considered as loading.
+	 * @param file The file to track.
+	 * @return Whether this file was already being tracked.
+	 */
+	private static boolean track(File file) {
+		return !trackedFiles.add(file);
+	}
+
+	/**
+	 * Stops tracking that a script (its file) should be considered as loading.
+	 * @param script The script to stop tracking.
+	 */
+	private static void untrack(Script script) {
+		// Loaded scripts are created with canonical files
+		trackedFiles.remove(script.getConfig().getFile());
+	}
+
 	/**
 	 * Loads the Script present at the file using {@link #loadScripts(List, OpenCloseable)},
 	 * 	sending info/error messages when done.
@@ -483,15 +509,14 @@ public class ScriptLoader {
 	 *  and closed after the {@link Structure#postLoad()} stage.
 	 * @return Info on the loaded scripts.
 	 */
-	@SuppressWarnings("removal")
 	private static CompletableFuture<ScriptInfo> loadScripts(List<Config> configs, OpenCloseable openCloseable) {
 		if (configs.isEmpty()) // Nothing to load
 			return CompletableFuture.completedFuture(new ScriptInfo());
 
 		eventRegistry().events(ScriptPreInitEvent.class)
-			.forEach(event -> event.onPreInit(configs));
-		//noinspection deprecation - we still need to call it
-		Bukkit.getPluginManager().callEvent(new PreScriptLoadEvent(configs));
+				.forEach(event -> event.onPreInit(configs));
+		//noinspection removal - we still need to call it
+		Bukkit.getPluginManager().callEvent(new ch.njol.skript.events.bukkit.PreScriptLoadEvent(configs));
 
 		ScriptInfo scriptInfo = new ScriptInfo();
 
@@ -513,7 +538,7 @@ public class ScriptLoader {
 		}
 
 		return CompletableFuture.allOf(scriptInfoFutures.toArray(new CompletableFuture[0]))
-			.thenApply(unused -> {
+			.thenApply(ignored -> {
 				// TODO in the future this won't work when parallel loading is fixed
 				// It does now though so let's avoid calling getParser() a bunch.
 				ParserInstance parser = getParser();
@@ -630,6 +655,10 @@ public class ScriptLoader {
 				} finally {
 					parser.setInactive();
 
+					for (LoadingScriptInfo info : scripts) {
+						untrack(info.script);
+					}
+
 					openCloseable.close();
 				}
 			}).exceptionally(t -> {
@@ -637,21 +666,7 @@ public class ScriptLoader {
 			});
 	}
 
-	private static class LoadingScriptInfo {
-
-		public final Script script;
-
-		public final List<Structure> structures;
-
-		public final Map<Structure, Node> nodeMap;
-
-		public LoadingScriptInfo(Script script, List<Structure> structures, Map<Structure, Node> nodeMap) {
-			this.script = script;
-			this.structures = structures;
-			this.nodeMap = nodeMap;
-		}
-
-	}
+	private record LoadingScriptInfo(Script script, List<Structure> structures, Map<Structure, Node> nodeMap) { }
 
 	/**
 	 * Creates a script and loads the provided config into it.
@@ -810,6 +825,8 @@ public class ScriptLoader {
 			return null;
 		}
 
+		track(file);
+
 		try {
 			String name = Skript.getInstance().getDataFolder().toPath().toAbsolutePath()
 				.resolve(Skript.SCRIPTSFOLDER).relativize(file.toPath().toAbsolutePath()).toString();
@@ -857,6 +874,10 @@ public class ScriptLoader {
 	 *         This data is calculated by using {@link ScriptInfo#add(ScriptInfo)}.
 	 */
 	public static ScriptInfo unloadScripts(Set<Script> scripts) {
+		scripts = scripts.stream()
+			.filter(script -> !track(script.getConfig().getFile()))
+			.collect(Collectors.toSet());
+
 		// ensure unloaded scripts are not being unloaded
 		for (Script script : scripts) {
 			if (!loadedScripts.contains(script))
@@ -920,6 +941,8 @@ public class ScriptLoader {
 			File scriptFile = script.getConfig().getFile();
 			assert scriptFile != null;
 			disabledScripts.add(new File(scriptFile.getParentFile(), DISABLED_SCRIPT_PREFIX + scriptFile.getName()));
+
+			untrack(script);
 		}
 
 		return info;
@@ -1041,6 +1064,7 @@ public class ScriptLoader {
 				items.add(item);
 			} else if (subNode instanceof SectionNode subSection) {
 
+				//noinspection resource - manual management is intentional
 				RetainingLogHandler handler = SkriptLogger.startRetainingLog();
 				find_section:
 				try {
@@ -1177,7 +1201,7 @@ public class ScriptLoader {
 	 * Any changes to loaded scripts will not be reflected in the returned set.
 	 */
 	public static Set<Script> getLoadedScripts() {
-		return Collections.unmodifiableSet(new HashSet<>(loadedScripts));
+		return Set.copyOf(loadedScripts);
 	}
 
 	/**
@@ -1185,7 +1209,7 @@ public class ScriptLoader {
 	 * Any changes to disabled scripts will not be reflected in the returned set.
 	 */
 	public static Set<File> getDisabledScripts() {
-		return Collections.unmodifiableSet(new HashSet<>(disabledScripts));
+		return Set.copyOf(disabledScripts);
 	}
 
 	/**
@@ -1316,7 +1340,7 @@ public class ScriptLoader {
 			script = script.replace('/', File.separatorChar).replace('\\', File.separatorChar);
 		} else if (!StringUtils.endsWithIgnoreCase(script, ".sk")) {
 			int dot = script.lastIndexOf('.');
-			if (dot > 0 && !script.substring(dot + 1).equals(""))
+			if (dot > 0 && !script.substring(dot + 1).isEmpty())
 				return null;
 			script = script + ".sk";
 		}
